--- a/data/rules.yml
+++ b/data/rules.yml
@@ -19,11 +19,11 @@ rules:
   steps:
   - intent: goodbye
   - action: utter_goodbye
-- rule: Say 'I am a bot' anytime the user challenges
-  steps:
-  - intent: affirm
-  - action: name_form
-  - active_loop: name_form
+#- rule: Say 'I am a bot' anytime the user challenges
+#  steps:
+#  - intent: affirm
+#  - action: name_form
+#  - active_loop: name_form
 #- rule: Submit name form
 #  condition:
 #  - active_loop: name_form
